I made some changes here!

--- a/stringMethod.ipynb
+++ b/stringMethod.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Title() => it turns every first char big and the char after a number is big \n",
+    "# title() => it turns every first char big and the char after a number is big \n",
     "a=\"I love 2d graphics and 3g Technology and programming\"\n",
     "print(a.title())\n",
     "# capitalize() => it turns every first char big but after a number still the same\n",
@@ -289,7 +289,53 @@
     "print(seven.isidentifier())# it returns True if the string is a valid identifier, otherwise False\n",
     "print(eight.isidentifier())\n",
     "print(nine.isidentifier())\n",
-    "print(ten.isidentifier())\n"
+    "print(ten.isidentifier())\n",
+    "y=\"Aaaaabmsdba\"\n",
+    "z=\"Aaaaabmsdba123\"\n",
+    "print(y.isalpha()) # To check if my string is alphabetic\n",
+    "print(z.isalnum()) # To check if my string alphabetuc and number\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bakri is one of the smartest person in the entire world\n"
+     ]
+    }
+   ],
+   "source": [
+    "# replace(oldvalue, newvalue, count) => to replace an old word with a new word\n",
+    "a=\"Bakri is one of the poorest person in the entire world\"\n",
+    "print(a.replace(\"poorest\",\"smartest\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bakri Badet loves Programming\n",
+      "Bakri,Badet,loves,Programming\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \"sep\".join(tuple or list)  => it returns my list or tuple into a string\n",
+    "lst=[\"Bakri\",\"Badet\",\"loves\",\"Programming\"]\n",
+    "print(\" \".join(lst)) #  I choose firstly my seprator then .join(my list or tuple)\n",
+    "print(\",\".join(lst)) #  I choose firstly my seprator then .join(my list or tuple)\n",
+    "print(type(\",\".join(lst)))"
    ]
   },
   {
