new added foramtting

--- a/String_Formatting.ipynb
+++ b/String_Formatting.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,21 +82,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bakri 10\n"
+      "Bakri 10\n",
+      "I am Bakri I am from Syria my age 31 I graduated from Aleppo university with Average 82.76\n",
+      "I am Bakri I am from Syria my age 31 I graduated from Aleppo university with Average 82.76\n",
+      "Hello\n"
      ]
     }
    ],
    "source": [
     "print(\"{} {}\".format(\"Bakri\",10))\n",
-    "# {} new way\n",
-    "# %s %d %f old way\n"
+    "# {}       => new way\n",
+    "# %s %d %f => old way\n",
+    "print(\"I am {} I am from {} my age {} I graduated from Aleppo university with Average {}\"\n",
+    "      .format(name,county,age,avg))\n",
+    "\n",
+    "# I can spcify the type of format\n",
+    "# {:s} , {:d} , {:f}\n",
+    "print(\"I am {:s} I am from {:s} my age {:d} I graduated from Aleppo university with Average {:.2f}\"\n",
+    "      .format(name,county,age,avg))\n",
+    "myLongString = \"Hello people of Elzero web school I love you all\"\n",
+    "print(\"{:.5s}\".format(myLongString))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My Money in Bank is: 500_016_230_198 \n",
+      "My Money in Bank is: 500,016,230,198 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Foramat Money\n",
+    "myMoney= 500016230198\n",
+    "print(\"My Money in Bank is: {:_d} \".format(myMoney)) # it will seperate the digits with \"_\" into three numbers\n",
+    "print(\"My Money in Bank is: {:,d} \".format(myMoney)) # it will seperate the digits with \"_\" into three numbers\n",
+    "# {:&d} its wrong specifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one two three\n",
+      "one two three\n",
+      "10.000 20 30.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c = \"one\",\"two\",\"three\"\n",
+    "print(\"{} {} {}\".format(a,b,c))\n",
+    "print(\"{0} {1} {2}\".format(a,b,c)) \n",
+    "# format(a,b,c) a in index 0 b index 1 c index 2\n",
+    "x,y,z = 10,20,30\n",
+    "print(\"{0:.3f} {1:d} {2:.2f}\".format(x,y,z)) "
    ]
   },
   {
