--- a/String_Formatting.ipynb
+++ b/String_Formatting.ipynb
@@ -158,11 +158,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### Foramt in Version 3.6+:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My Name is Bakri and my Age is : 31\n"
+     ]
+    }
+   ],
+   "source": [
+    "myname=\"Bakri\"\n",
+    "myage=31\n",
+    "print(f\"My Name is {myname} and my Age is : {myage}\")\n"
+   ]
   }
  ],
  "metadata": {
