--- a/List.ipynb
+++ b/List.ipynb
@@ -274,10 +274,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count() => To count a given element how much repeated\n",
+    "d=[1,2,3,45,1,5,1,1,1,6,7,9,1,2]\n",
+    "print(d.count(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# index() => To return the index of an item in a list\n",
+    "e=[\"Bakri\",\"Jana\",\"Omar\",\"koko\",\"Samira\",\"Iman\"]\n",
+    "print(e.index(\"Omar\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Abdulkader', 'Bakri', 'Jana', 'Omar', 'koko', 'Samira', 'Iman']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Abdulkader', 'Bakri', 'Jana', 'Omar', 'koko', 'Samira', 'Iman', 'Amira']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  insert() => To insert an item to the list in before a givin index()\n",
+    "e=[\"Bakri\",\"Jana\",\"Omar\",\"koko\",\"Samira\",\"Iman\"]\n",
+    "e.insert(0,\"Abdulkader\") # The old item at this index will be shifted to the right\n",
+    "print(e)\n",
+    "e.insert(len(e),\"Amira\") # It equivalent to append() in this case\n",
+    "e\n",
+    "e.insert(-1,\"Ahmad\") # before last item the last item will be shifted to the right\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bakri', 'Jana', 'Omar', 'koko', 'Samira']\n",
+      "['Bakri', 'Jana', 'koko', 'Samira']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pop() => remove an item at specific index (by default last)\n",
+    "e=[\"Bakri\",\"Jana\",\"Omar\",\"koko\",\"Samira\",\"Iman\"]\n",
+    "e.pop()\n",
+    "print(e)\n",
+    "e.pop(2)\n",
+    "print(e)"
+   ]
   },
   {
    "cell_type": "code",
