--- a/List.ipynb
+++ b/List.ipynb
@@ -18,10 +18,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### [1] Lists are ordered we can access the items using the index\n",
-    "##### [2] Lists are mutable which means I can add, edit, and delete items(Strings are immutable).\n",
-    "##### [3] Lists items are not unique => I can dupliacate items\n",
-    "##### [4] Lists can have different data types(That what makes different from an array)\n"
+    "###### [1] Lists are ordered we can access the items using the index\n",
+    "###### [2] Lists are mutable which means I can add, edit, and delete items(Strings are immutable).\n",
+    "###### [3] Lists items are not unique => I can dupliacate items\n",
+    "###### [4] Lists can have different data types(That what makes different from an array)\n"
    ]
   },
   {
