--- a/String_Formatting.ipynb
+++ b/String_Formatting.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
      "output_type": "stream",
      "text": [
       "one two three\n",
-      "one two three\n",
+      "one three two\n",
       "10.000 20 30.00\n"
      ]
     }
@@ -151,7 +151,7 @@
    "source": [
     "a,b,c = \"one\",\"two\",\"three\"\n",
     "print(\"{} {} {}\".format(a,b,c))\n",
-    "print(\"{0} {1} {2}\".format(a,b,c)) \n",
+    "print(\"{0} {2} {1}\".format(a,b,c)) \n",
     "# format(a,b,c) a in index 0 b index 1 c index 2\n",
     "x,y,z = 10,20,30\n",
     "print(\"{0:.3f} {1:d} {2:.2f}\".format(x,y,z)) "
@@ -182,6 +182,20 @@
     "myage=31\n",
     "print(f\"My Name is {myname} and my Age is : {myage}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
