--- a/Python/Ditionaries.ipynb
+++ b/Python/Ditionaries.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Two-Dimensional Dict\n",
+    "# Two-Dimensional Dict(nested)\n",
     "languages={\n",
     "    \"one\":{\"name\":\"C++\",\"progress\":\"50%\"},\n",
     "    \"two\":{\"name\":\"Python\",\"progress\":\"80%\"},\n",
@@ -195,42 +195,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2626608207552\n",
-      "2626608171008\n",
-      "2626607677584\n",
-      "2626607677584\n"
+      "{'name': 'Bakri'}\n",
+      "21\n"
      ]
     }
    ],
    "source": [
-    "# we notice here that the items inside my values still pointing to the same objects \n",
-    "import copy\n",
-    "languages={\n",
-    "    \"one\"  :{\"name\":\"C++\",\"progress\":\"50%\"},\n",
-    "    \"two\"  :{\"name\":\"Python\",\"progress\":\"80%\"},\n",
-    "    \"three\":{\"name\":\"R\",\"progress\":\"30%\"}\n",
-    "}\n",
-    "cplan =copy.deepcopy(languages)\n",
-    "print(id(languages))\n",
-    "print(id(cplan))\n",
-    "\n",
-    "print(id(languages[\"one\"][\"name\"]))\n",
-    "print(id(cplan[\"one\"][\"name\"]))"
+    "# setdefault() => To put set value to a giving Key\n",
+    "member={\"name\":\"Bakri\"}\n",
+    "print(member)\n",
+    "print(member.setdefault(\"Age\",21)) \n",
+    "# it will check if there a value in my Dict will return it\n",
+    "# Otherwise the default value will be returned\n",
+    "# it takes two arguments (key,value)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Bakri', 'Country': 'Syria', 'Age': 21}\n",
+      "('Age', 21)\n",
+      "{'Country': 'Syria'}\n",
+      "Bakri\n"
+     ]
+    }
+   ],
+   "source": [
+    "# popitem()  => It removes the last item from my Dict and return it as result of my method\n",
+    "member={\"name\":\"Bakri\",\"Country\":\"Syria\"}\n",
+    "member.update({\"Age\":21})\n",
+    "print(member)\n",
+    "print(member.popitem())\n",
+    "# pop()  =>  # it removes the item I give its key and return its value as result of the method\n",
+    "             # it takes two parameters dictionary.pop(keyname, defaultvalue)\n",
+    "x=member.pop(\"name\",\"Im a default value\")\n",
+    "print(member)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('name', 'Bakri'), ('Country', 'Syria')])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# items() => returns all my keys and value\n",
+    "member={\"name\":\"Bakri\",\"Country\":\"Syria\"}\n",
+    "member.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name 1': 1, 'name 2': 1, 'name 3': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fromkeys() => look google\n",
+    "# lets define two tuples\n",
+    "t1=(\"name 1\",\"name 2\",\"name 3\")\n",
+    "t2=1\n",
+    "print(dict.fromkeys(t1,t2))\n"
+   ]
   },
   {
    "cell_type": "code",
