--- a/Python/PythonTruck.ipynb
+++ b/Python/PythonTruck.ipynb
@@ -9,29 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Here is a list of the Python keywords.  Enter any keyword to get more help.\n",
-      "\n",
-      "False               class               from                or\n",
-      "None                continue            global              pass\n",
-      "True                def                 if                  raise\n",
-      "and                 del                 import              return\n",
-      "as                  elif                in                  try\n",
-      "assert              else                is                  while\n",
-      "async               except              lambda              with\n",
-      "await               finally             nonlocal            yield\n",
-      "break               for                 not                 \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(\"keywords\")"
    ]
@@ -45,19 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a, b ,c =1,2,3\n",
     "print(a)\n",
@@ -102,6 +72,123 @@
     "print('Hallo \"Love\"')\n",
     "# Want to print '' without escaping\n",
     "print(\"Hallo 'Love'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Every thing I give inside the bool() function is True except:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# False Values\n",
+    "\n",
+    "print(bool(0))\n",
+    "print(bool(\"\"))\n",
+    "print(bool(''))\n",
+    "print(bool([]))\n",
+    "print(bool(False))\n",
+    "print(bool(()))\n",
+    "print(bool({}))\n",
+    "print(bool(None))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### How to convert Tuple, and List to Dictionary?\n",
+    "###### Its not possible unless we have nested Tuple and Dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Bakri', 'Age': 31}\n",
+      "{'name': 'Bakri', 'Age': 31}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d=((\"name\",\"Bakri\"),(\"Age\",31))\n",
+    "print(dict(d))\n",
+    "e =[[\"name\",\"Bakri\"],[\"Age\",31]]\n",
+    "print(dict(e))\n",
+    "# We can not convert the Set even the nested set cause its unhashable Type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x= input(\"please enter a number\")\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo sad asda sa as \n"
+     ]
+    }
+   ],
+   "source": [
+    "fname= input(\"insert your first name please\")\n",
+    "mname= input(\"insert your middle name please\")  \n",
+    "lname= input(\"insert your last name please\")  \n",
+    "print(f\"Hallo {fname.strip()} {mname.strip()} {lname.strip()} \")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bakri.badet\n",
+      "Bakri\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Practical Slice Email\n",
+    "email=\"bakri.badet@gmail.com\"\n",
+    "print(email[0:email.index(\"@\")])\n",
+    "#  I can use my string method directly after the input statement\n",
+    "myName=input(\"Please enter your name? \").strip().capitalize()\n",
+    "print(myName)"
    ]
   },
   {
