edited some files

--- a/Python/Ditionaries.ipynb
+++ b/Python/Ditionaries.ipynb
@@ -290,6 +290,189 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Loop with Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Osama Skills Is: \n",
+      "- Html\n",
+      "- Css\n",
+      "- Js\n",
+      "Ahmed Skills Is: \n",
+      "- Html\n",
+      "- Css\n",
+      "- Js\n",
+      "Sayed Skills Is: \n",
+      "- Html\n",
+      "- Css\n",
+      "- Js\n",
+      "Ali Skills Is: \n",
+      "- Html\n",
+      "- Css\n",
+      "- Js\n",
+      "{'Html': '70%', 'Css': '80%', 'Js': '70%'}\n",
+      "{'Html': '90%', 'Css': '80%', 'Js': '90%'}\n",
+      "{'Html': '70%', 'Css': '60%', 'Js': '90%'}\n",
+      "80%\n",
+      "80%\n",
+      "60%\n",
+      "Skills and Progress For Osama Is: \n",
+      "HTML => 70%\n",
+      "CSS => 80%\n",
+      "JS => 70%\n",
+      "Skills and Progress For Ahmed Is: \n",
+      "HTML => 90%\n",
+      "CSS => 80%\n",
+      "JS => 90%\n",
+      "Skills and Progress For Sayed Is: \n",
+      "HTML => 70%\n",
+      "CSS => 60%\n",
+      "JS => 90%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -----------------\n",
+    "# -- Loop => For --\n",
+    "# -- Nested Loop --\n",
+    "# -----------------\n",
+    "\n",
+    "peoples = [\"Osama\", \"Ahmed\", \"Sayed\", \"Ali\"]\n",
+    "\n",
+    "skills = ['Html', 'Css', 'Js']\n",
+    "\n",
+    "for name in peoples:  # Outer Loop\n",
+    "\n",
+    "  print(f\"{name} Skills Is: \")\n",
+    "\n",
+    "  for skill in skills:  # Inner Loop\n",
+    "\n",
+    "    print(f\"- {skill}\")\n",
+    "\n",
+    "# Dictionary\n",
+    "\n",
+    "peoples = {\n",
+    "  \"Osama\": {\n",
+    "    \"Html\": \"70%\",\n",
+    "    \"Css\": \"80%\",\n",
+    "    \"Js\": \"70%\"\n",
+    "  },\n",
+    "  \"Ahmed\": {\n",
+    "    \"Html\": \"90%\",\n",
+    "    \"Css\": \"80%\",\n",
+    "    \"Js\": \"90%\"\n",
+    "  },\n",
+    "  \"Sayed\": {\n",
+    "    \"Html\": \"70%\",\n",
+    "    \"Css\": \"60%\",\n",
+    "    \"Js\": \"90%\"\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "print(peoples[\"Osama\"])\n",
+    "print(peoples[\"Ahmed\"])\n",
+    "print(peoples[\"Sayed\"])\n",
+    "\n",
+    "print(peoples[\"Osama\"]['Css'])\n",
+    "print(peoples[\"Ahmed\"]['Css'])\n",
+    "print(peoples[\"Sayed\"]['Css'])\n",
+    "\n",
+    "for name in peoples:\n",
+    "\n",
+    "  print(f\"Skills and Progress For {name} Is: \")\n",
+    "\n",
+    "  for skill in peoples[name]:\n",
+    "\n",
+    "    print(f\"{skill.upper()} => {peoples[name][skill]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('HTML', '80%'), ('CSS', '90%'), ('JS', '70%'), ('PHP', '80%')])\n",
+      "HTML => 80%\n",
+      "CSS => 90%\n",
+      "JS => 70%\n",
+      "PHP => 80%\n",
+      "HTML => 80%\n",
+      "CSS => 90%\n",
+      "JS => 70%\n",
+      "PHP => 80%\n",
+      "HTML Progress Is: \n",
+      "- Main => 80%\n",
+      "- Pugjs => 80%\n",
+      "CSS Progress Is: \n",
+      "- Main => 90%\n",
+      "- Sass => 70%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ------------------------------\n",
+    "# -- Advanced Dictionary Loop --\n",
+    "# ------------------------------\n",
+    "\n",
+    "mySkills = {\n",
+    "  \"HTML\": \"80%\",\n",
+    "  \"CSS\": \"90%\",\n",
+    "  \"JS\": \"70%\",\n",
+    "  \"PHP\": \"80%\"\n",
+    "}\n",
+    "\n",
+    "print(mySkills.items())\n",
+    "\n",
+    "#######################\n",
+    "\n",
+    "for skill in mySkills:\n",
+    "\n",
+    "  print(f\"{skill} => {mySkills[skill]}\")\n",
+    "\n",
+    "#######################\n",
+    "\n",
+    "for skill_key, skill_progress in mySkills.items():\n",
+    "\n",
+    "  print(f\"{skill_key} => {skill_progress}\")\n",
+    "\n",
+    "#######################\n",
+    "\n",
+    "myUltimateSkills = {\n",
+    "  \"HTML\": {\n",
+    "    \"Main\": \"80%\",\n",
+    "    \"Pugjs\": \"80%\"\n",
+    "  },\n",
+    "  \"CSS\": {\n",
+    "    \"Main\": \"90%\",\n",
+    "    \"Sass\": \"70%\"\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "for main_key, main_value in myUltimateSkills.items():\n",
+    "\n",
+    "  print(f\"{main_key} Progress Is: \")\n",
+    "\n",
+    "  for child_key, child_value in main_value.items():\n",
+    "\n",
+    "    print(f\"- {child_key} => {child_value}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
