--- a/Python/stringMethod.ipynb
+++ b/Python/stringMethod.ipynb
@@ -31,9 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I Love 2D Graphics And 3G Technology And Programming\n",
+      "I love 2d graphics and 3g technology and programming\n",
+      "001\n",
+      "011\n",
+      "111\n",
+      "BAKRI\n"
+     ]
+    }
+   ],
    "source": [
     "# title() => it turns every first char big and the char after a number is big \n",
     "a=\"I love 2d graphics and 3g Technology and programming\"\n",
@@ -255,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +278,9 @@
       "True\n",
       "True\n",
       "False\n",
-      "False\n"
+      "False\n",
+      "True\n",
+      "True\n"
      ]
     }
    ],
