edit function file

--- a/Python/Function.ipynb
+++ b/Python/Function.ipynb
@@ -259,12 +259,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Lambda Functions:"
+    "##### Lambda Functions:\n",
+    "###### [1] it has No name.\n",
+    "###### [2] You can call it inline without defing it.\n",
+    "###### [3] You can use it in return data from another function.\n",
+    "###### [4] Lambda used fro simple functions and def handle the large tasks.\n",
+    "###### [5] Lambda is one single expression not block of code.\n",
+    "###### [6] Lambda Type is function."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello koko\n",
+      "Hello Koko\n",
+      "Hello Bakri your age is 31\n",
+      "say_hello\n",
+      "<lambda>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def say_hello(name):\n",
+    "    return f\"Hello {name}\"\n",
+    "print(say_hello(\"koko\"))\n",
+    "# To define a lambda function we can do the following:\n",
+    "hello= lambda name: f\"Hello {name}\"\n",
+    "# The name after lambda is my parameter\n",
+    "# : f\"Hello {name}\" it means return the result of this\n",
+    "print(hello(\"Koko\"))\n",
+    "hello= lambda name,age: f\"Hello {name} your age is {age}\"\n",
+    "print(hello(\"Bakri\",31))\n",
+    "print(say_hello.__name__)\n",
+    "print(hello.__name__) # result is <lambda> that means it has no name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
