--- a/Python/Files_Handling.ipynb
+++ b/Python/Files_Handling.ipynb
@@ -285,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can use seek by writing files\n",
+    "# We can use seek by writing files to move the cursor to spicific place.\n",
     "with open(\"/pf/myfiles/try.txt\",\"w\") as f :\n",
     "    f.write(\"Bakri\")\n",
     "    f.seek(0)\n",
