--- a/Python/Function.ipynb
+++ b/Python/Function.ipynb
@@ -263,7 +263,7 @@
     "###### [1] it has No name.\n",
     "###### [2] You can call it inline without defing it.\n",
     "###### [3] You can use it in return data from another function.\n",
-    "###### [4] Lambda used fro simple functions and def handle the large tasks.\n",
+    "###### [4] Lambda used for simple functions and def handle the large tasks.\n",
     "###### [5] Lambda is one single expression not block of code.\n",
     "###### [6] Lambda Type is function."
    ]
